# tak-engine-python

./: .gitignore  Pipfile  behave.ini  pyproject.toml
features/API/: Square.feature
features/playing/: initialization.feature  move-stones.feature  move-validation.feature  place-stones.feature  winning.feature
features/ptn-parsing/: board-size.feature  simple-parse.feature  tps-parsing.feature
features/steps/: __init__.py  initialization.py  ptn.py  square.py  stonehandling.py  winning.py
features/steps/checks/: __init__.py  stone.py
features/steps/screenplay/: __init__.py
features/steps/screenplay/abilities/: __init__.py  play_the_game.py
features/steps/screenplay/actions/: __init__.py  create.py  interaction.py  move.py  place.py  try_to_move.py  try_to_place.py
features/steps/screenplay/questions/: __init__.py  board.py  game.py  general.py  next_player.py  player.py  the_stack_on_position.py  top_stone.py
features/steps/screenplay/tasks/: check.py
features/steps/types/: __init__.py  direction.py  player.py  position.py  stack.py  stone.py  stone_type.py
formatter/: snippetsformatter.py
src/: Square.py  main.py
tak/: __init__.py  board.py  direction.py  game.py  grammar.py  move.py  player.py  ptn.py  square.py  stone.py  tag.py  tps.py
