[tool.poetry]
name = "tak-engine"
version = "0.1.0"
description = "Tak Engine writen in Python"
authors = ["Tobias Klauenberg <toklaui@live.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pylint = "*"
behave = "*"
autopep8 = "*"
pyhamcrest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
